--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.1",
     "axios": "^1.7.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "link": "^2.1.1",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
